# MIB-AIS-Animaj-Explorations

./: .gitignore  README.md  pyproject.toml
configs/: release.yaml
docs/: comparison_with_mib_ais.md
reports/: official_protocol_clip_metrics.csv  official_protocol_summary_metrics.csv
reports/release_full/: official_protocol_clip_metrics.csv  official_protocol_dashboard.html  official_protocol_manifest.json  official_protocol_summary_metrics.csv
src/improved_ais/: __init__.py  check_install.py  checkpoint.py  download_data.py  eval_official.py  export_safetensors.py  losses.py  metrics.py  train.py
src/improved_ais/data/: __init__.py  animaj_hdf5.py  animaj_windows.py  preprocessing.py  window.py
src/improved_ais/models/: __init__.py  improved_ais.py
tests/: test_eval_metrics.py  test_install.py
weights/: model_config.yaml  training_config.yaml
