[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "improved-ais-release"
version = "0.1.0"
description = "Standalone improved AIS-BiLSTM motion in-betweening release."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "safetensors>=0.4",
]

[project.optional-dependencies]
train = [
  "torch>=2.2",
  "tqdm>=4.66",
]
hf = [
  "huggingface_hub>=0.23",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
